# src/main/java/dev/roelofr/rest/responses/LoginResponse.java
@@ -1,0 +1,8 @@
+package dev.roelofr.rest.responses;
+
+
+import java.time.LocalDateTime;
+
+public record LoginResponse(String name, String jwt, LocalDateTime expiration) {
+
+}
